# Electra_Management_System

./: .gitignore  Dockerfile  ReadMe.md  main.py  pyproject.toml  station_config.json
src/station_components/: battery.py  charger.py  session.py  session_boost.py  station.py
src/station_components/statuses_models/: models.py
tests/: test_charger.py  test_station.py
